# airtask

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/core/: dbmanager.cpp  dbmanager.h  traymanager.cpp  traymanager.h
src/core/models/: projects.cpp  projects.h  tags.cpp  tags.h  task.cpp  task.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  style.qss  taskitem.cpp  taskitem.h
